css/style.css
@font-face {
  font-family: "Rubik-VariableFont_wght";
  src: url("../fonts/Rubik-VariableFont_wght.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}
body {
  font-family: "Rubik-VariableFont_wght", sans-serif;
}

header {
  background: linear-gradient(0deg, #efd9ce, #b1cee8, #8ab5dc, #5091cb, #327bab);
  padding-top: 5vh;
  border-bottom: 2px solid #000000;
}
header .title {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
}
header .title a {
  margin: 0;
  font-size: 1.5rem;
  text-decoration: none;
  color: #000000;
}
header .logo {
  width: 100px;
}
header .title a, header .logo {
  margin: 0 1rem;
}
header .dropdown-menu {
  --bs-dropdown-min-width: 0;
}
header .nav-item i {
  margin-right: 1rem;
}

.home .tab {
  display: flex;
  list-style-type: none;
  margin-top: 0.5rem;
  padding-left: 0;
}
.home .tab__link {
  margin: 0.5rem;
  padding: 0.5rem 1rem;
  color: #327bab;
  text-decoration: none;
  transition: color 0.3s, background-color 0.3s;
  border: 1px solid #327bab;
  border-radius: 10px;
}
.home .tab__link:hover {
  border: 1px solid #000000;
  color: #000000;
}
.home aside {
  padding-top: 1rem;
}
.home aside .btn-primary {
  margin: 0.2rem 0;
}
.home .card {
  border: 1px solid #000000;
}
.home div[id^=region]:target {
  display: block;
}
.home div[id^=region]:not(:target) {
  display: none;
}

footer {
  background: #327bab;
}
footer i {
  margin-right: 0.5rem;
}

.promo-banner {
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 300px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  z-index: 1000;
  display: none;
  border-radius: 8px;
  transition: opacity 1.5s ease, transform 1.5s ease;
  opacity: 0;
  transform: translateY(20px);
}

.promo-banner .btn {
  font-size: 0.7rem;
}

.promo-banner.show {
  display: block;
  opacity: 1;
  transform: translateY(0);
}

main {
  background: linear-gradient(180deg, #ffffff, #efd9ce, #b1cee8, #8ab5dc, #5091cb, #327bab);
}

.btn-primary {
  background-color: #327bab;
}/*# sourceMappingURL=style.css.map */

